--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ We are passionate about providing personalized solutions that perfectly fit your
             <span>Motorized Blinds & Shades provide ease of use and automation. Control your window coverings remotely or integrate them into your smart home system for ultimate convenience. Perfect for hard-to-reach windows or enhancing home automation.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="commercial.html" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/custom.png" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Custom Solutions</h2>
