--- a/client.html
+++ b/client.html
@@ -115,8 +115,8 @@
         <h2 style="text-align: center; font-size: 2.5rem; margin-bottom: 40px; color: #333; font-family: 'Arial', sans-serif;">What Our Clients Say</h2>
         <div class="client-testimonials" style="display: flex; flex-direction: column; gap: 40px;">
             <div class="testimonial" style="background-color: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); padding: 20px; text-align: left; display: flex; flex-direction: column;">
-                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"Premier Blinds & Shades transformed our home with the perfect window treatments. The motorized blinds are fantastic and have made our space more modern and functional. Highly recommend!"</p>
-                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">Sarah Williams, Oakville</p>
+                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"I'm very happy to have chosen Premier Blinds. Got zebra blinds for my new windows and patio door; the prices are very good, installation was quick and clean. I would highly recommend them to my own clients as well when they need blinds. Contact Premier Blinds with confidence!"</p>
+                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">Odris Koco </p>
                 <div class="rating" style="display: flex; gap: 5px; margin-top: 10px;">
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
