--- a/client.html
+++ b/client.html
@@ -122,34 +122,34 @@
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
-                    <span style="color: #ccc; font-size: 1.5rem;">&#9733;</span>
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                 </div>
             </div>
             <div class="testimonial" style="background-color: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); padding: 20px; text-align: left; display: flex; flex-direction: column;">
-                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"Excellent service and a wide variety of options to choose from. The team at Premier Blinds really understood our needs and delivered exactly what we were looking for. Professional and reliable!"</p>
-                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">John Carter, Toronto</p>
-                <div class="rating" style="display: flex; gap: 5px; margin-top: 10px;">
-                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
-                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
-                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
-                    <span style="color: #ccc; font-size: 1.5rem;">&#9733;</span>
-                    <span style="color: #ccc; font-size: 1.5rem;">&#9733;</span>
-                </div>
-            </div>
-            <div class="testimonial" style="background-color: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); padding: 20px; text-align: left; display: flex; flex-direction: column;">
-                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"We had our office windows fitted with Premier Blinds, and we couldn't be happier. The quality and durability of their products are top-notch. Their customer service is second to none!"</p>
-                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">Lily Thomas, Mississauga</p>
+                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"Great experience and service. Our blinds were installed by Allen. He was pleasant, knowledgable and professional. Our blinds look amazing and we would highly recommend their service!"</p>
+                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">Lara Baisa</p>
                 <div class="rating" style="display: flex; gap: 5px; margin-top: 10px;">
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
-                    <span style="color: #ccc; font-size: 1.5rem;">&#9733;</span>
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                 </div>
             </div>
             <div class="testimonial" style="background-color: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); padding: 20px; text-align: left; display: flex; flex-direction: column;">
-                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"From consultation to installation, the entire process was seamless. Premier Blinds & Shades gave our home the style and functionality we were looking for. Truly great value for money!"</p>
-                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">David Green, Hamilton</p>
+                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"Great service from Premier blinds! Our blinds were installed by Alen. He was punctual and the customer service provided by him was excellent. We were totally unaware of the process but he helped us throughtout the entire process of selecting and installing the blinds without any hassle. Will definitely recommend their service!"</p>
+                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">Suzita  Varghese</p>
+                <div class="rating" style="display: flex; gap: 5px; margin-top: 10px;">
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
+                    <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
+                </div>
+            </div>
+            <div class="testimonial" style="background-color: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); padding: 20px; text-align: left; display: flex; flex-direction: column;">
+                <p style="font-size: 1.2rem; color: #555; font-style: italic; margin-bottom: 15px;">"I want to give Tharian and Premier Blinds a shout out for their exceptional customer service, high quality automated blinds and willingness to support the customer when there are questions or issues. I would recommend Tharian & team to anyone looking for blinds and shutters in the GTA."</p>
+                <p style="font-size: 1.1rem; font-weight: bold; color: #333;">Vinay </p>
                 <div class="rating" style="display: flex; gap: 5px; margin-top: 10px;">
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
                     <span style="color: gold; font-size: 1.5rem;">&#9733;</span>
