--- a/index.html
+++ b/index.html
@@ -149,56 +149,56 @@ We are passionate about providing personalized solutions that perfectly fit your
     </div>
     <div class="serviceMaxWidth">
 
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="commercial.html" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/commercials.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Commercial Solutions</h2>
             <span>Our commercial window treatments are designed for durability, privacy, and light control. From privacy shades to energy-efficient solutions, we provide high-quality options to enhance your office, retail, or commercial space.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/curtains.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Curtains</h2>
             <span>Curtains bring elegance and warmth to any room, with custom tailoring to fit your unique windows. Choose from a wide range of fabrics and styles, including Blackout Curtains for complete light control, Sheer Curtains for soft, diffused light, and Thermal Curtains for energy efficiency.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/blinds.jpg" width="100%" /> </div>
           <div class="servicesDivTxt">
             <h2>Blinds</h2>
             <span>Our blinds offer sleek and practical solutions for light control, privacy, and style. Available in a range of materials such as wood, aluminum, and fabric, our selection includes Roller, Venetian, Vertical, and Panel Track Blinds, with both manual and motorized options for ultimate convenience.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/shutters.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Shutters</h2>
             <span>Shutters are a durable and stylish option for both homes and businesses. Our collection includes Plantation Shutters for timeless appeal, Interior Shutters for privacy and light control, and Exterior Shutters to enhance curb appeal and protect your windows from the elements.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/shades.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Shades</h2>
             <span>Our shades offer soft, fabric-based solutions for any space. From Roman Shades with their elegant folds, to Honeycomb Shades for energy efficiency, and Solar Shades that reduce glare without sacrificing the view, our shades provide both functionality and style.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/outdoor.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Outdoor Shades & Awnings</h2>
             <span>Enhance your outdoor spaces with durable, weather-resistant Outdoor Blinds & Awnings. Options include Ziptrak Blinds for seamless protection and Pergola Blinds for sun control, offering comfort and privacy for your patio, deck, or garden.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/motor.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Motorized Blinds & Shades</h2>
             <span>Motorized Blinds & Shades provide ease of use and automation. Control your window coverings remotely or integrate them into your smart home system for ultimate convenience. Perfect for hard-to-reach windows or enhancing home automation.</span>
           </div>
         </a> </div>
-      <div class="serviceDiv"> <a href="#" class="bgColor">
+      <div class="serviceDiv"> <a href="" class="bgColor">
           <div class="serviceImgWerapper"> <img alt="" src="images/custom.png" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Custom Solutions</h2>
