--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ We are passionate about providing personalized solutions that perfectly fit your
 
     <div class="viewUpdatesMaxWidth">
   <div class="viewUpdatesMaxWidth1">
-    <a href="images/remote.png" class="bgColor">
+    <a href="" class="bgColor">
       <div class="serviceImgWerapper">
         <img alt="" src="images/remote.png" width="100%" />
         <p><b>Remote Controlled Atmosphere Setting in you space - Simplifying Life With Remote Control Shades And Blinds.</b></p>
@@ -222,7 +222,7 @@ We are passionate about providing personalized solutions that perfectly fit your
   </div>
 <br>
   <div class="viewUpdatesMaxWidth2">
-    <a href="images/alexa.png" class="bgColor">
+    <a href="" class="bgColor">
       <div class="serviceImgWerapper">
         <img alt="" src="images/alexa.png" width="100%" />
         <p><b>Smart Shades for Your Smart Home - Your Home Gets A Soul With The Right Shades.</b</p>
