--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ text-align: center;
         <div class="ban-text">
           <div class="mainContainer">
             <div class="ban-text-in">
-              <p>Welcome to</p>
-              <h1>Premier Blinds & Shutters</h1>
+              <p><b>Welcome to</b></p>
+              <h1><b>Premier Blinds & Shutters<b></h1>
               <a href="https://wa.me/15483335913">Get a Quote</a>
             </div>
           </div>
