--- a/about-us.html
+++ b/about-us.html
@@ -146,7 +146,7 @@ By sourcing our products directly from trusted manufacturers, we eliminate the m
 <p><strong>5-Year Warranty:</strong>
 We stand behind the quality of our products. That’s why all our blinds and shutters come with a 5-year warranty, giving you peace of mind knowing that your investment is protected for years to come.</p>
 <p><strong>Custom Solutions for Every Need:</strong>
-Visit us at one of our offices in Toronto, Hamilton, or Kitchener for a personalized consultation, or let us bring our showroom to you with our convenient in-home service.</p>
+Experience a personalized consultation in the comfort of your home with our convenient in-home service. We’ll bring our showroom to you, ensuring a tailored experience without the need to visit any where.</p>
 
 
 
