--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ text-align: center;
     </div>
 
     <div class="scroll"><span> Scroll Down</span></div>
-    <div class="banner-slider  owl-theme">
+    <div class="banner-slider owl-carousel owl-theme">
       <div class="item"> <img alt="" src="images/Banner.jpg" width="100%" >
         <div class="ban-text">
           <div class="mainContainer">
