Update about-us.html - Button and Mission statement
Home Button and Mission statement removal

--- a/about-us.html
+++ b/about-us.html
@@ -91,10 +91,7 @@
   </header>  <section class="subBannerSec"> <img alt="" src="images/header.jpg" width="100%">
     <div class="subpageTxtDiv">
       <h1>About Us</h1>
-      <ul>
-        <li><a href="index.html">Home </a></li>
-        <li>About Us</li>
-      </ul>
+      
 
     </div>
   </section>
@@ -118,7 +115,7 @@ We are passionate about providing personalized solutions that perfectly fit your
             </div>
             <div class="missionDivMain">
             <h3>Mission</h3>
-            <p>At Premier Blinds & Shutters, our mission is to deliver premium, tailored window coverings that meet the unique needs of our residential and commercial clients. With over 6+ years of experience and a commitment to quality craftsmanship, we strive to provide personalized solutions that combine style, durability, and innovation. As a family-owned business, we are dedicated to offering exceptional customer service, direct factory-to-customer pricing, and a 5-year warranty on all products. We serve Southern Ontario with integrity, trust, and a passion for creating beautiful, functional spaces.</p>
+            <p>At Premier Blinds & Shutters, our mission is to deliver premium, tailored window coverings that meet the unique needs of our residential and commercial clients. </p>
             </div>
 
             </div>
