Update about-us.html - Vision change

--- a/about-us.html
+++ b/about-us.html
@@ -111,7 +111,7 @@ We are passionate about providing personalized solutions that perfectly fit your
             <div class="visionDiv1">
             <div class="visionDivMain">
             <h3>Vision</h3>
-            <p>To be the leading provider of innovative and high-quality window treatments across Southern Ontario, offering custom solutions that enhance the beauty, functionality, and comfort of every home and business. We aim to build lasting relationships with our customers by consistently delivering exceptional products, outstanding service, and unmatched value.</p>
+            <p>To be the leading provider of innovative and high-quality window treatments across Southern Ontario, offering custom solutions that enhance the beauty, functionality, and comfort of every home and business.</p>
             </div>
             <div class="missionDivMain">
             <h3>Mission</h3>
