Update index.html remote image changed

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ We are passionate about providing personalized solutions that perfectly fit your
   <div class="viewUpdatesMaxWidth1">
     <a href="" class="bgColor">
       <div class="serviceImgWerapper">
-        <img alt="" src="images/remote.png" width="100%" />
+        <img alt="" src="images/remote2.jpg" width="100%" />
         <p><b>Remote Controlled Atmosphere Setting in you space - Simplifying Life With Remote Control Shades And Blinds.</b></p>
       </div>
     </a>
