Update commercial.html Commercial Image Update

--- a/commercial.html
+++ b/commercial.html
@@ -330,18 +330,18 @@ text-align: center;
         <div class="gallery">
           <div class="row">
               <div class="galleryDivAll">
-                  <div class="col-md-4 gallerySpaceMain"> <a href="images/com-1.jpg" >
+                  <div class="col-md-4 gallerySpaceMain"> <a href="images/commer1.jpg" >
                       <div class="galleryBorder snip1205">
                           <div class="galleryWrapper">
                               <div class="galleryIconWrapper"> </div>
-                              <img alt="" src="images/com-1.jpg" width="100%"> </div>
+                              <img alt="" src="images/commer1.jpg" width="100%"> </div>
                       </div>
                       </a> </div>
-                  <div class="col-md-4 gallerySpaceMain"> <a href="images/com-2.jpg" >
+                  <div class="col-md-4 gallerySpaceMain"> <a href="images/commer2.jpg" >
                       <div class="galleryBorder snip1205">
                           <div class="galleryWrapper">
                               <div class="galleryIconWrapper"> </div>
-                              <img alt="" src="images/com-2.jpg" width="100%"> </div>
+                              <img alt="" src="images/commer2.jpg" width="100%"> </div>
                       </div>
                       </a> </div>
                   <div class="col-md-4 gallerySpaceMain"> <a href="images/com-3.jpg" >
@@ -358,11 +358,11 @@ text-align: center;
                                   <img alt="" src="images/com-8.jpg" width="100%"> </div>
                           </div>
                           </a> </div>
-                          <div class="col-md-4 gallerySpaceMain"> <a href="images/com-5.jpg" >
+                          <div class="col-md-4 gallerySpaceMain"> <a href="images/commer3.jpg" >
                               <div class="galleryBorder snip1205">
                                   <div class="galleryWrapper">
                                       <div class="galleryIconWrapper"> </div>
-                                      <img alt="" src="images/com-5.jpg" width="100%"> </div>
+                                      <img alt="" src="images/commer3.jpg" width="100%"> </div>
                               </div>
                               </a> </div>
                               <div class="col-md-4 gallerySpaceMain"> <a href="images/com-5.jpg" >
@@ -374,15 +374,11 @@ text-align: center;
                                   </a> </div>
 
                       <div class="col-sm-12">
-                        <img alt="" src="images/com-4.jpg" width="100%">
+                        <img alt="" src="images/commer4.jpg" width="100%">
 
                         <h2 class="testClient"> <span></span></h2>
                       </div>
-                      <div class="col-sm-12">
-                        <img alt="" src="images/com-6.jpg" width="100%">
-
-                        <h2 class="testClient"> <span></span></h2>
-                      </div>
+                      
               </div>
               <div class="clearfix"></div>
           </div>
