--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ We are passionate about providing personalized solutions that perfectly fit your
     <div class="serviceMaxWidth">
 
       <div class="serviceDiv"> <a href="commercial.html" class="bgColor">
-          <div class="serviceImgWerapper"> <img alt="" src="images/commercials.jpg" width="100%" > </div>
+          <div class="serviceImgWerapper"> <img alt="" src="images/com-3.jpg" width="100%" > </div>
           <div class="servicesDivTxt">
             <h2>Commercial Solutions</h2>
             <span>Our commercial window treatments are designed for durability, privacy, and light control. From privacy shades to energy-efficient solutions, we provide high-quality options to enhance your office, retail, or commercial space.</span>
